# SquigDecode

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: instructions.md
data/: dwell_times.pkl  metadata.pkl  sequences.pkl
src/: QC_squig_data.py  __init__.py  architecture.py  config.py  data_simulator.py  train.py
tests/: __init__.py
