[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squigdecode"
version = "0.1.0"
description = "Signal-to-Base decoder for high-SNR nanopore sequencing"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Janet", email = ""}
]
keywords = ["basecalling", "nanopore", "sequencing", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.4.0",
]
ml = [
    "torch>=1.9.0",
    "scikit-learn>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/user/squigdecode"
"Bug Reports" = "https://github.com/user/squigdecode/issues"
"Source" = "https://github.com/user/squigdecode"
